Update pom.xml: versions - java version also in javadoc plugin, - in surefire plugin also added argline needed for treatment of modules.