@@ -904,7 +904,6 @@
 						</manifestSections>
 					</archive>
 				</configuration>
-
 			</plugin>
 
 
@@ -915,26 +914,27 @@
 			</plugin>
 
 
+			<!-- versions 3.0.0 or newer (3.1.1) only in conjunction with maven 3.9.0-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version><!-- 3.0.0 or newer (3.1.1) only in conjunction with maven 3.9.0-->
+				<version>2.8.2</version>
 			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
 
 			<!-- javadoc plugin -->
@@ -945,7 +945,7 @@
 				<configuration>
 					<breakiterator>true</breakiterator>
 					<show>private</show>
-					<source>11</source>
+					<source>17</source>
 				</configuration>
 			</plugin>
 
@@ -954,7 +954,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${versionTestPlugins}</version>
 				<configuration>
-					<argLine>-Xmixed</argLine>
+					<argLine>-Xmixed --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 					<trimStackTrace>false</trimStackTrace>
 					<systemPropertyVariables>
 						<!--testResourcesDir>${project.testResources}</testResourcesDir-->
@@ -969,16 +969,17 @@
 			<include>PdfMojoTest.java</include>
           </includes-->
 					<excludes>
-            <!--exclude>PdfMojoTest.java</exclude-->
-          </excludes>
+						<!--exclude>PdfMojoTest.java</exclude-->
+					</excludes>
 				</configuration>
 			</plugin>
 
 
+			<!-- version 4.0.0-M4 and above require site.vm and still it does not work -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>4.0.0-M3</version><!-- M4 and above require site.vm and still it does not work -->
+				<version>4.0.0-M3</version>
 				<configuration>
 					<locales>en</locales>
 				</configuration>
@@ -1026,8 +1027,7 @@
 						</goals>
 					</execution>
 					<execution>
-					  <?m2e execute onConfiguration?>
-					  <!--?m2e execute onConfiguration?-->
+						<?m2e execute onConfiguration?>
 						<id>validate-converters</id>
 						<goals>
 							<goal>vrs</goal>
@@ -1064,6 +1064,7 @@
       mvn versions:display-dependency-updates
       mvn versions:display-property-updates
       -->
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
